I added authentication. I added authroize middleware. I added email integration. I added swagger.
