# src/routes/index.route.js
@@ -9,26 +9,32 @@
 */
 
 const express = require('express');
-const movies = require('./movies.route');
+const authRoute = require('./auth.route');
+const moviesRoute = require('./movies.route');
+const swaggerUi = require('swagger-ui-express');
+const authorize = require('../middleware/authorize/authorize');
+const router = express.Router({ mergeParams: true });
 
-const router = express.Router();
 
-router.use('/api/v1/movies', movies);
-
+// base path
 router.get('/', (req, res) => res.send('TMDB API Version1'));
+
+router.use('/auth', authRoute);
+
+router.use('/api/v1/movies', authorize,  moviesRoute);
+
+// health check
 router.get('/health', (req, res) => {
   const healthcheck = {
-		uptime: process.uptime(),
+    uptime: process.uptime(),
 		message: 'OK',
 		timestamp: Date.now()
   };
   res.send(JSON.stringify(healthcheck));
 });
 
-
-const swaggerUi = require('swagger-ui-express');
+// swagger
 swaggerDocument = require('../swagger.json')
-
 router.use('/swagger', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 module.exports = router;
